# pears

./: .bumpversion.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: 112725-key.csv  112725.csv
src/: bt.py  pears.py
src/pears/: __init__.py
src/pears/data/: __init__.py  types.py
src/pears/models/: __init__.py  base.py
src/pears/models/pointwise/: __init__.py  bradley_terry.py
src/pears/strategies/: __init__.py  base.py
src/pears/strategies/pointwise/: __init__.py  confidence_interval.py  score.py
