[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pears"
version = "0.1.0"
description = "Statistical ranking models with uncertainty quantification"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clara Fannjiang"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Repository = "https://github.com/domfj/pears.git"

[tool.setuptools]
packages = ["pears"]

[tool.setuptools.package-dir]
"" = "src"
