[tool.poetry]
name = "pears"
version = "0.1.0"
description = "Statistical ranking models with uncertainty quantification"
authors = ["Clara Fannjiang"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/domfj/pears.git"
packages = [{include = "pears", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20"
scipy = "^1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
matplotlib = "^3.0"
seaborn = "^0.11"
scikit-learn = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
