[tool.poetry]
name = "pears"
version = "0.1.0"
description = "Statistical ranking models with uncertainty quantification"
authors = ["Clara Fannjiang"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/domfj/pears.git"
packages = [{include = "pears", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.4"
scipy = "^1.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
matplotlib = "^3.0"
seaborn = "^0.11"
scikit-learn = "^1.0"
pre-commit = "^4.5.1"
ruff = "^0.14.10"
mypy = "^1.19.1"

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length to match common Python standards
line-length = 100

# Source directory for import resolution
src = ["src"]

[tool.ruff.lint]
# Enable recommended rules + additional useful rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "NPY",    # numpy-specific rules
    "RUF",    # Ruff-specific rules
]

# Rules to ignore (with justification)
ignore = [
    "E501",   # Line too long - handled by formatter
    "N802",   # Function name should be lowercase - conflicts with scientific naming (W_i, N_ij)
    "N806",   # Variable in function should be lowercase - same reason
    "ARG001", # Unused function argument - common in abstract methods
    "ARG002", # Unused method argument - common in abstract methods
    "RET504", # Unnecessary assignment before return - sometimes clearer for readability
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files (they're re-exported)
"__init__.py" = ["F401"]
# Tests can have additional relaxed rules when tests are added
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
# Use src layout for import detection
known-first-party = ["pears"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes (Python standard)
quote-style = "double"
# Indent with 4 spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"

[tool.mypy]
# Python version
python_version = "3.11"

# Moderate strictness - balance between safety and usability
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true

# Don't require type hints everywhere (moderate approach)
disallow_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = true

# Follow imports for better type checking
follow_imports = "normal"
no_implicit_reexport = true

# Show error codes for easier configuration
show_error_codes = true
show_column_numbers = true
pretty = true

# Numpy/scipy compatibility
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
